
1.9.0 (23.08.2012)
=============
- Возможность сортировки элементов галереи перетаскиванием.
- Импорт товаров из *.csv
- Добавлен вывод родительских категорий у настройки мультикатегорий товара в админке.
- Добавлены события msOnBeforeTVUpdate и msOnTVUpdate.
- Добавлены события msOnBeforeProductUpdate и msOnProductUpdate.
- Метод getProduct теперь может возвращать массив объектов а не значений.
-----
- Ability to sort the elements of the gallery by drag-n-drop.
- Import of goods from *.csv
- Added displaying parent categories for multi-categories setting in goods manager.
- Added events msOnBeforeTVUpdate and msOnTVUpdate.
- Added events msOnBeforeProductUpdate and msOnProductUpdate.
- Method getProduct can return array of objects instead of array of values.

1.8.1 (17.07.2012)
=============
- Исправлена работа с процессорами личного кабинета
-----
- Fixed work with private office processors

1.8.0 (16.07.2012)
=============
- Добавлены события для плагинов. Теперь можно писать плагины, реагирующие на создание\изменение заказа и его статуса
- Добавлен плагин miniShop. Выводит меню менеджеру на фронтенде и чистит таблицы от удаленных элементов при очищении корзины ресурсов.
- Удаление товара не удаляет его свойства. Они удаляются при очистке корзины, новым плагином.
- Процессоры переделаны для работы с $modx->runProcessor
-----
- Added events for plugins. Now you can make plugins, that will listen for events create\update of an order and its status change.
- Added plugin miniShop. Displaying menu for manager on frontend and clean tables on empty resources trash.
- Remove of product do not remove its properties. They are removed when you empty trash, by new plugin.
- Processors was improved for work with $modx->runProcessor

1.7.3 (02.07.2012)
=============
- Добавлена поддержка прямых ссылок на некоторые действия компонента (типа, /manager/?a=78&act=edit&item=15)
- Очередные улучшения UI админки
- Добавлен чанк tpl.msPayment.row