@@ -9,6 +9,7 @@
 if (!$modx->hasPermission('save')) {return $modx->error->failure($modx->lexicon('ms.no_permission'));}
 $file = trim($scriptProperties['file']);
 $gid = $scriptProperties['gid'];
+$wid = $modx->getOption('wid', $scriptProperties, $_SESSION['minishop']['warehouse']);
 
 // Проверка обязательных полей
 if (empty($gid)) {return $modx->error->failure($modx->lexicon('ms.gallery.err_nf'));}
@@ -20,7 +21,7 @@ $order = $modx->getCount('ModGallery', array('gid' => $gid, 'wid' => $_SESSION['
 $res = $modx->newObject('ModGallery');
 $res->fromArray(array(
 	'gid' => $gid
-	,'wid' => $_SESSION['minishop']['warehouse']
+	,'wid' => $wid
 	,'file' => $file
 	,'name' => $scriptProperties['name']
 	,'description' => $scriptProperties['description']
