@@ -8,7 +8,6 @@
 if (!$modx->hasPermission('view')) {return $modx->error->failure($modx->lexicon('ms.no_permission'));}
 setlocale(LC_ALL,'en_US.UTF-8');
 
-$isLimit = !empty($scriptProperties['limit']);
 $start = $modx->getOption('start',$scriptProperties,0);
 $limit = $modx->getOption('limit',$scriptProperties,round($modx->getOption('default_per_page') / 4));
 
@@ -17,7 +16,7 @@ if (empty($scriptProperties['file'])) {
 }
 
 $file = $scriptProperties['file'];
-$types = explode(',', $modx->getOption('minishop.import_fields', '', 'pagetitle,longtitle,introtext,content,ms_price,ms_weight,ms_article,ms_img'));
+$types = explode(',', $modx->getOption('minishop.import_fields', '', 'pagetitle,longtitle,introtext,content,ms_price,ms_weight,ms_article,ms_img,tag,gallery'));
 
 $fields = array();
 if (($tmp = fopen($file, "r")) !== false) {
@@ -34,10 +33,7 @@ for ($i=$start; $i<($limit+$start); $i++) {
 	if (isset($fields[$i])) {
 		if (!empty($_SESSION['minishop']['import'][$i])) {$dst = $_SESSION['minishop']['import'][$i];}
 		else if (isset($types[$i])) {$dst = $types[$i];}
-		else {
-			$tmp = rand(0, count($types) - 1);
-			$dst = $types[$tmp];
-		}
+		else {$dst = 'none';}
 		
 		$_SESSION['minishop']['import'][$i] = $dst;
 		$arr[] = array(
